Add nameboard to game

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/styles.css">
+	<link href='https://fonts.googleapis.com/css?family=Cherry+Cream+Soda|Gochi+Hand|Freckle+Face|Cabin+Sketch|Chelsea+Market' rel='stylesheet' type='text/css'>
 	<title>Tic-Tac-Watermellon</title>
 </head>
 <body>
+	<div class="name">
+		<h1>Tic Tac Watermellon</h1>
+	</div>
 	<div class="rind">
 		<container class="board">
 			<!-- top row -->
