Set up of app.js and successfully add event handler.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<title>Tic-Tac-Watermellon</title>
 </head>
 <body>
-	<div class="name">
+	<div class="gameName">
 		<h1>Tic Tac Watermellon</h1>
 	</div>
 	<div class="rind">
 		<container class="board">
 			<!-- top row -->
 			<div id="1"></div>
-			<div class="xMark" id="2"></div>
+			<div class="x" id="2"></div>
 			<div id="3"></div>
 			<!-- middle row -->
-			<div class="oMark" id="4"></div>
+			<div class="o" id="4"></div>
 			<div id="5"></div>
 			<div id="6"></div>
 			<!-- bottom row -->
