Fine tuned rendering. Add reset button.

--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/styles.css">
-	<link href='https://fonts.googleapis.com/css?family=Cherry+Cream+Soda|Gochi+Hand|Freckle+Face|Cabin+Sketch|Chelsea+Market' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Cherry+Cream+Soda' rel='stylesheet' type='text/css'>
 	<title>Tic-Tac-Watermellon</title>
 </head>
 <body>
 	<div class="gameName">
 		<h1>Tic Tac Watermellon</h1>
+		<button>NewGame</button>
 	</div>
 	<div class="rind">
 		<container class="board">
 			<!-- top row -->
 			<div id="0"></div>
-			<div class="x" id="2"></div>
+			<div id="1"></div>
 			<div id="2"></div>
 			<!-- middle row -->
-			<div class="o" id="3"></div>
+			<div id="3"></div>
 			<div id="4"></div>
 			<div id="5"></div>
 			<!-- bottom row -->
